revereor/theme/light.css
/* ... */
	.panel-container .panel, .contact-icons a:hover {
		background: var(--control-bg-dark);
	}
		#quick-links .separator, .dropdown li.separator {
			border-top-style: dotted;
		}
	blockquote, blockquote blockquote blockquote, .attachbox, .codebox {
		margin: 16px 1px;
		background: var(--control-bg-dark);
		border-color: var(--control-bg-dark);
	}
		blockquote blockquote {
			margin: 16px 8px;
		}
	blockquote blockquote, blockquote blockquote blockquote blockquote, ul.forums, .row {
		background-color: var(--control-bg);
	}
	.dropdown-contents li.bg2, .dropdown-contents li.bg2:hover, .notification_list li.bg3 {
		font-weight: 600;
		background-color: var(--control-bg-dark);
	}
	.notification_list p.notification-time {
		color: var(--text-dim);
	}

.headerbar {
	background: var(--secondary);
}
	.search-header {
		margin-top: 35px;
	}
		.search-header .inputbox {
			color: var(--button-text) !important;
			background: none;
			border-bottom: 1px solid #fffa;
			border-radius: 0;
		}
			.search-header .inputbox:hover, .search-header .inputbox:focus {
				background: #fff1;
				border-bottom: 1px solid #fff;
			}
				.search-header ::placeholder {
					color: #fffa;
				}
					.search-header:hover ::placeholder, .search-header:focus ::placeholder {
						color: #fff;
					}
	.search-header .button-search, .search-header .button-search-end {
		padding: 1px 3px 4px;
	}

.logo {
	padding: 10px;
}

.headerbar * {
	color: var(--text-header);
}
	.site_logo {
		background-size: contain;
	}

.navbar {
	padding-left: 6px;
	background: none;
}
	ul.navlinks, .attachbox dd {
		border-top: none;
	}

.breadcrumbs .crumb::before {
	content: '/';
	font-weight: 300;
}
	.breadcrumbs span:first-of-type a {
		margin-right: -.25em;
	}
		.breadcrumbs span:first-of-type a span {
			display: none;
		}

li.header dt, li.header dd, table.table1 thead th {
	padding-top: 0;
	font-weight: 600 !important;
	text-transform: none;
}
	li.header dt {
		font-size: 1.1em;
		line-height: 1em;
	}
	li.header dl.row-item dt .list-inner {
		padding-left: 2px;
	}
		ul.topiclist li.row {
			padding: 2px 0;
		}
			ul.topiclist.forums li.row dt div, ul.topiclist.forums li.row dd:not(.lastpost) {
				margin-top: 2px;
			}
				ul.topiclist li.row dd {
					padding-top: 0;
				}

.responsive-center.time {
	margin: -8px 8px 8px 8px;
}

.action-bar {
	font-size: unset;
}
	.action-bar.compact, .stat-block, .headerspace {
		margin: -8px 8px;
	}
	.action-bar.compact {
		clear: both;
	}
	.action-bar .button,
	.action-bar .search-box .inputbox {
		box-sizing: border-box;
		height: 26px;
	}
		.action-bar > *, .action-bar .button {
			margin-right: 0 !important;
			margin-left: 5px !important;
		}
		.action-bar > :first-child,
		.action-bar > .dropdown-container > :first-child,
		.action-bar .button-search,
		.action-bar .button-search-end {
			margin-left: 0 !important;
		}
	.action-bar .inputbox {
		background: var(--control-bg-light);
		border-color: var(--secondary) !important;
	}
		.action-bar .inputbox:hover, .action-bar .inputbox:focus {
			background: var(--control-bg-bright);
		}
		.action-bar .inputbox::placeholder {
			color: var(--text-dim);
		}
	.action-bar .fa-fw {
		width: 1.1em;
	}

.forabg, .forumbg {
	margin: 16px 0;
	background: var(--primary);
}

a, h1, h2, h3, .postlink, .post h3 a.first-unread, .post:target h3 a {
	color: var(--primary);
}
	.navigation a, dl.details dd {
		color: var(--primary) !important;
	}
	a:hover, .navigation a:hover, .postlink:hover,
	a:focus, .navigation a:focus, .postlink:focus,
	a:active, .navigation a:active, .postlink:active,
	.arrow-left:hover, .arrow-right:hover {
		color: var(--secondary);
	}
	.navigation a, .postlink,
	.navigation a:hover, .postlink:hover,
	.navigation a:focus, .postlink:focus {
		background: none !important;
	}
		.navigation .active-subsection a,
		.navigation .active-subsection a:hover,
		.navigation .active-subsection a:focus {
			background: var(--primary) !important;
			color: var(--button-text) !important;
		}
	a.forumtitle, a.topictitle, a.lastsubject, .username, .username-coloured, .postlink {
		font-weight: 600;
	}
	.postlink {
		border: none;
	}

#memberlist tr.inactive, #team tr.inactive {
	font-style: unset;
}

.topiclist dl.row-item dt, .topiclist dl.row-item dd {
	min-height: 48px;
}
.forumbg .header a, .forabg .header a, th a,
li.header dl.row-item dt, li.header dl.row-item dd {
	color: var(--button-text) !important;
}

li.header dt, li.header dd {
	color: var(--text);
}

.topiclist dl.row-item {
	background-blend-mode: multiply;
	background-color: inherit;
}

p {
	margin-bottom: 1em;
}

select {
	background: var(--control-bg);
	min-height: 1.75em;
}

select, .cplist {
	border: none !important;
	border-radius: 4px;
	box-shadow: 0 0 0 1px var(--shadow) !important;
}

hr {
	display: none;
}
	.postbody hr {
		display: block;
		border-color: var(--border);
	}

li.row {
	border-top-color: transparent !important;
	border-bottom-color: var(--border) !important;
}
	li.row:hover, table.table1 tbody tr:hover, table.table1 tbody tr.hover,
	table.zebra-list tr:nth-child(2n) td, ul.zebra-list li:nth-child(2n) {
		background: var(--control-bg-light);
	}
	table.zebra-list tr:nth-child(2n+1) td, ul.zebra-list li:nth-child(2n+1) {
		background: var(--control-bg);
	}
	li.row strong {
		color: unset;
	}
	ul.topiclist dd, li.row:hover dd {
		border-left-color: transparent;
	}
	ul.topiclist li, .panel-container .panel li.header dd, .panel-container .panel li.header dt {
		color: var(--text-dim) !important;
	}

.button, .button .icon,
a.button1, input.button1, input.button3, a.button2, input.button2,
a.button1:hover, input.button1:hover, a.button2:hover, input.button2:hover, input.button3:hover {
	background: var(--secondary);
	color: var(--button-text);
	border-color: var(--secondary);
}
	.button {
		font-size: 14px;
	}
/* ... */

